resolução de conflitos

--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
                 <div id="navbarBasicExample" class="navbar-menu is-active">
 <!--Is-active to make it apparent on mobile-->
                     <div class="navbar-start">
-                        <a class="navbar-item" href="/index.html">
+                        <a class="navbar-item" href="./index.html">
                             Home
                         </a>
     
-                        <a class="navbar-item" href="/contact.html">
+                        <a class="navbar-item" href="./contact.html">
                             Contact
                         </a>
             </nav>
