--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <div id="navbarBasicExample" class="navbar-menu is-active">
 <!--Is-active to make it apparent on mobile-->
                     <div class="navbar-start">
-                        <a class="navbar-item" href="/index.html">
+                        <a class="navbar-item" href="./index.html">
                             Home
                         </a>
     
-                        <a class="navbar-item" href="/contact.html">
+                        <a class="navbar-item" href="./contact.html">
                             Contact
                         </a>
             </nav>
@@ -135,7 +135,7 @@
         </button>
     </header>
     <div class="card-content">
-        <p class="title is-3"><span class="tag is-danger is-large">OneBitCode</span> JavaScript FullStack in 8 weeks</p>
+        <p class="title is-3"><span class="tag is-danger is-large">OneBitCode</span> JavaScript FullStack</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, nobis earum velit ea quae perspiciatis qui, enim vero dolores vel nulla non expedita quod labore blanditiis asperiores illum. Itaque, velit!</p>
     </div>
     <div class="card-content">
