--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="https://bulma.io">
+                    <a class="navbar-item" href="#">
                         <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                     </a>
     
@@ -47,8 +47,8 @@
                 <div class="column is-3">
                     <div class="card">
                         <div class="card-image">
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <figure class="image">
+                            <img src="./IMAGES/Me.jpg" alt="Placeholder image">
                         </figure>
                         </div>
                         <div class="card-content">
@@ -58,14 +58,14 @@
                                 </div>
                                 <div class="media-content">
                                     <p class="title is-4">Leandro Rocha</p>
-                            <span class="tag is-dark is-medium">JavaScript FullStack Developer</span>
+                            <span class="tag is-link is-medium">JavaScript FullStack Developer</span>
 <!--tag is-dark (color) is-medium (size)-->
                                 </div>
                             </div>  
 
                             <div class="content"><br>
                             <p>(61) 9 9585-1446</p>
-                            <p>Leandro@Gmail.com</p>
+                            <p>Leandro@gmail.com</p>
                             </div>
                         </div>
                         </div>
@@ -98,8 +98,8 @@
     </header>
     <div class="columns">
         <div class="column is-3">
-            <figure class="image is-128x128">
-                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+            <figure class="image is-50x50">
+                <img class="is-rounded" src="./IMAGES/companyx.png">
             </figure>
         </div>
 
@@ -112,8 +112,8 @@
 <br>
     <div class="columns">
         <div class="column is-3">
-            <figure class="image is-128x128">
-                <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+            <figure class="image is-50x50">
+                <img class="is-rounded" src="./IMAGES/companyy.png">
             </figure>
         </div>
 
